Resizing column widths so 3 fit on in tablet view (md to lg). Updating side nav classes so the menu will overlay the rest of the page (still sorting out some issues with this: the rest of the elements are still moving and the menu isn't collapsing by default on screen resize.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,6 +70,14 @@ button.bg-primary-darkest:disabled {
   max-width: 290px;
 }
 
+@media (max-width: 1023px) {
+  .rkk-column-outer {
+    min-width: 0;
+    max-width: none;
+    width: 28vw;
+  }
+}
+
 .rkk-column {
   background-color: unset !important;
 }
